third_party/move/move-compiler-v2/tests/checking/typing/pack_missing_field.exp

Diagnostics:
error: missing fields `f`
  ┌─ tests/checking/typing/pack_missing_field.move:7:10
  │
7 │         (S { } : S);
  │          ^^^^^

error: missing fields `n2`
  ┌─ tests/checking/typing/pack_missing_field.move:8:37
  │
8 │         R {s:_, f:_, n1:_, n2:_} = (R { s: S{f: 0}, n1: Nat{f: 0}, f: 0, } : R);
  │                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: missing fields `f`
   ┌─ tests/checking/typing/pack_missing_field.move:14:37
   │
14 │         R {s:_, f:_, n1:_, n2:_} = (R { s, n2, n1 }: R);
   │                                     ^^^^^^^^^^^^^^^

error: missing fields `f`
   ┌─ tests/checking/typing/pack_missing_field.move:16:28
   │
16 │         (Nat { f: Nat { f: Nat { }}}: Nat<Nat<Nat<S>>>);
   │                            ^^^^^^^
